api auth doc #6
