# api/docs/swagger.json
@@ -28,21 +28,18 @@
                     "auth"
                 ],
                 "summary": "Log out",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "tokien ",
+                        "name": "Cookie",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "type": "string"
                         }
@@ -88,7 +85,7 @@
                         },
                         "headers": {
                             "Set-Cookie": {
-                                "type": "string",
+                                "type": "object",
                                 "description": "Token"
                             }
                         }
